--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -23,3 +23,12 @@
   cursor: pointer;
 
 }
+.Reset{
+  background-color: #fffed4;
+color: rgb(0, 0, 0);
+padding: 10px;
+font-size: 16px;
+border: none;
+cursor: pointer;
+
+}
