--- a/src/components/Dropdown.module.css
+++ b/src/components/Dropdown.module.css
@@ -1,7 +1,9 @@
 
 .dropdown {
-  position: right;
-  display: inline-block;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+
 }
 
 .dropdown-toggle {
@@ -12,6 +14,8 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
+  opacity: 0.6;
+  transition: 0.3s;
 }
 
 .dropdown-menu {
@@ -23,6 +27,8 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  opacity: 0.6;
+  transition: 0.3s;
 }
 
 .dropdown-menu li {
@@ -33,3 +39,4 @@
 }
 
 .dropdown-menu li:hover {background-color: #f1f1f1}
+:hover{opacity:1}
