--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -1,15 +1,19 @@
+.searchBar {
+  display: flex; 
+  justify-content: center;
+}
 .Searchinput {
-    position: relative;
-    display: inline-block;
+  
 
   background-color: beige;
-  width: 50%;
+  width: 60%;
   height: 10%;
   box-shadow: 0px 8px 16px 0px rgb(204, 204, 183);
   z-index: 1;
   list-style-type: none;
   padding: 10px;
   margin: 20px;
+  margin-left: 20%;
 
 }
 
@@ -21,6 +25,9 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
+  opacity: 0.6;
+  transition: 0.3s;
+  
 
 }
 .Reset{
@@ -30,5 +37,8 @@ padding: 10px;
 font-size: 16px;
 border: none;
 cursor: pointer;
+opacity: 0.6;
+transition: 0.3s;
 
 }
+:hover{opacity:1}
